# Agendou-

./: .gitignore  Cargo.toml
beckend/: .gitignore  Cargo.toml
beckend/src/: agendamentos.rs  calc_preco.rs  licenca.rs  main.rs  menu.rs  servicos.rs
beckend/src/db/: mod.rs
beckend/src/models/: mod.rs
doc/: AGENDAMENTO_UX_GUIDELINES.md  CODE_REFERENCE.MD  PROJECT_STRUCTURE.MD  READ.MD  contexto_projeto.txt  logic_agendamento.md  tree.txt
frontend/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: Toast.svelte  icons.ts  toast.ts  types.ts
frontend/src/lib/components/: Autocomplete.svelte  AvailabilityPicker.svelte  ClienteCard.svelte  ConfirmarExclusao.svelte  Header.svelte  Main.svelte  Modal.svelte  ModalServico.svelte  ServicoCard.svelte  SideSheet.svelte  Sidebar.svelte  TimePicker.svelte  Toasts.svelte  WheelPicker.svelte
frontend/src/lib/icons/: icons.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/agendamentos/: +page.svelte  +page.ts
frontend/src/routes/api/agendamentos/: +server.ts
frontend/src/routes/api/agendamentos/[id]/: +server.ts
frontend/src/routes/api/availability/: +server.ts
frontend/src/routes/api/clientes/: +server.ts
frontend/src/routes/api/servicos/: +server.ts
frontend/src/routes/api/work_windows/: +server.ts
frontend/src/routes/clientes/: +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/servicos/: +page.svelte  +page.ts
src/: licenca.rs
src/db/: ss
src/doc/: PROJECT_STRUCTURE.MD
src/models/: mod.rs
(+1 files in other folders)
